// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render tests должен вернуть Item для section = new 1`] = `
<Fragment>
  <tr
    className="TradeInItem"
  >
    <td
      width="200"
    >
      <div
        className="TradeInItem__imagePlaceholder"
      />
    </td>
    <td
      className="TradeInItem__description"
      width="310"
    >
      <Link
        className="TradeInItem__title"
        target="_blank"
        url="link to item"
      >
        vehicleName
      </Link>
      <div>
        Новый
      </div>
      <div />
      <div>
        vin
      </div>
      <div>
        techParamsName
      </div>
      <div>
        humanGearType
      </div>
    </td>
    <td
      width="86"
    >
      00:00
    </td>
    <td
      width="160"
    >
      <div>
        userPhoneNumber
      </div>
      <div>
        userName
      </div>
    </td>
    <td
      width="160"
    >
      <div
        className="TradeInItem__divider"
      >
        —
      </div>
    </td>
    <td
      width="95"
    >
      <div
        className="TradeInItem__divider"
      >
        —
      </div>
    </td>
    <td
      className="TradeInItem__price"
    >
      <IconBg
        className="TradeInItem__clock"
      >
        <Svg
          name="#clock-full"
        />
      </IconBg>
      считаем
    </td>
  </tr>
</Fragment>
`;

exports[`render tests должен вернуть Item для section = used 1`] = `
<Fragment>
  <tr
    className="TradeInItem"
  >
    <td
      width="200"
    >
      <div
        className="TradeInItem__imagePlaceholder"
      />
    </td>
    <td
      className="TradeInItem__description"
      width="310"
    >
      <Link
        className="TradeInItem__title"
        target="_blank"
        url="link to item"
      >
        vehicleName
      </Link>
      <div />
      <div>
        mileAgeFormatted
      </div>
      <div>
        vin
      </div>
      <div>
        techParamsName
      </div>
      <div>
        humanGearType
      </div>
    </td>
    <td
      width="86"
    >
      00:00
    </td>
    <td
      width="160"
    >
      <div>
        userPhoneNumber
      </div>
      <div>
        userName
      </div>
    </td>
    <td
      width="160"
    >
      <div
        className="TradeInItem__divider"
      >
        —
      </div>
    </td>
    <td
      width="95"
    >
      <div
        className="TradeInItem__divider"
      >
        —
      </div>
    </td>
    <td
      className="TradeInItem__price"
    >
      <IconBg
        className="TradeInItem__clock"
      >
        <Svg
          name="#clock-full"
        />
      </IconBg>
      считаем
    </td>
  </tr>
</Fragment>
`;

exports[`render tests должен вернуть Item с TradeInItem__imagePlaceholder вместо картинки 1`] = `
<Fragment>
  <tr
    className="TradeInItem"
  >
    <td
      width="200"
    >
      <div
        className="TradeInItem__imagePlaceholder"
      />
    </td>
    <td
      className="TradeInItem__description"
      width="310"
    >
      <Link
        className="TradeInItem__title"
        target="_blank"
        url="link to item"
      >
        vehicleName
      </Link>
      <div />
      <div />
      <div>
        vin
      </div>
      <div>
        techParamsName
      </div>
      <div>
        humanGearType
      </div>
    </td>
    <td
      width="86"
    >
      00:00
    </td>
    <td
      width="160"
    >
      <div>
        userPhoneNumber
      </div>
      <div>
        userName
      </div>
    </td>
    <td
      width="160"
    >
      <div
        className="TradeInItem__divider"
      >
        —
      </div>
    </td>
    <td
      width="95"
    >
      <div
        className="TradeInItem__divider"
      >
        —
      </div>
    </td>
    <td
      className="TradeInItem__price"
    >
      <IconBg
        className="TradeInItem__clock"
      >
        <Svg
          name="#clock-full"
        />
      </IconBg>
      считаем
    </td>
  </tr>
</Fragment>
`;

exports[`render tests должен вернуть TradeInItem 1`] = `
<Fragment>
  <tr
    className="TradeInItem_separator"
  >
    <td
      colSpan="7"
    >
      3 января
    </td>
  </tr>
  <tr
    className="TradeInItem"
  >
    <td
      width="200"
    >
      <img
        height="135"
        src="imageUrls"
        width="180"
      />
    </td>
    <td
      className="TradeInItem__description"
      width="310"
    >
      <Link
        className="TradeInItem__title"
        target="_blank"
        url="link to item"
      >
        vehicleName
      </Link>
      <div />
      <div />
      <div>
        vin
      </div>
      <div>
        techParamsName
      </div>
      <div>
        humanGearType
      </div>
    </td>
    <td
      width="86"
    >
      00:00
    </td>
    <td
      width="160"
    >
      <div>
        userPhoneNumber
      </div>
      <div>
        userName
      </div>
    </td>
    <td
      width="160"
    >
      <div
        className="TradeInItem__divider"
      >
        —
      </div>
    </td>
    <td
      width="95"
    >
      <div
        className="TradeInItem__divider"
      >
        —
      </div>
    </td>
    <td
      className="TradeInItem__price"
    >
      <IconBg
        className="TradeInItem__clock"
      >
        <Svg
          name="#clock-full"
        />
      </IconBg>
      считаем
    </td>
  </tr>
</Fragment>
`;

exports[`render tests должен вернуть TradeInItem c Separator 1`] = `
<Fragment>
  <tr
    className="TradeInItem_separator"
  >
    <td
      colSpan="7"
    >
      3 января
    </td>
  </tr>
  <tr
    className="TradeInItem"
  >
    <td
      width="200"
    >
      <img
        height="135"
        src="imageUrls"
        width="180"
      />
    </td>
    <td
      className="TradeInItem__description"
      width="310"
    >
      <Link
        className="TradeInItem__title"
        target="_blank"
        url="link to item"
      >
        vehicleName
      </Link>
      <div />
      <div />
      <div>
        vin
      </div>
      <div>
        techParamsName
      </div>
      <div>
        humanGearType
      </div>
    </td>
    <td
      width="86"
    >
      00:00
    </td>
    <td
      width="160"
    >
      <div>
        userPhoneNumber
      </div>
      <div>
        userName
      </div>
    </td>
    <td
      width="160"
    >
      <div
        className="TradeInItem__divider"
      >
        —
      </div>
    </td>
    <td
      width="95"
    >
      <div
        className="TradeInItem__divider"
      >
        —
      </div>
    </td>
    <td
      className="TradeInItem__price"
    >
      <IconBg
        className="TradeInItem__clock"
      >
        <Svg
          name="#clock-full"
        />
      </IconBg>
      считаем
    </td>
  </tr>
</Fragment>
`;

exports[`render tests должен вернуть TradeInItem c Separator и годом 1`] = `
<Fragment>
  <tr
    className="TradeInItem_separator"
  >
    <td
      colSpan="7"
    >
      3 января 1988
    </td>
  </tr>
  <tr
    className="TradeInItem"
  >
    <td
      width="200"
    >
      <img
        height="135"
        src="imageUrls"
        width="180"
      />
    </td>
    <td
      className="TradeInItem__description"
      width="310"
    >
      <Link
        className="TradeInItem__title"
        target="_blank"
        url="link to item"
      >
        vehicleName
      </Link>
      <div />
      <div />
      <div>
        vin
      </div>
      <div>
        techParamsName
      </div>
      <div>
        humanGearType
      </div>
    </td>
    <td
      width="86"
    >
      00:00
    </td>
    <td
      width="160"
    >
      <div>
        userPhoneNumber
      </div>
      <div>
        userName
      </div>
    </td>
    <td
      width="160"
    >
      <div
        className="TradeInItem__divider"
      >
        —
      </div>
    </td>
    <td
      width="95"
    >
      <div
        className="TradeInItem__divider"
      >
        —
      </div>
    </td>
    <td
      className="TradeInItem__price"
    >
      500 ₽
    </td>
  </tr>
</Fragment>
`;
